--- a/AUTHORS
+++ b/AUTHORS
@@ -1,8 +1,3 @@
 # This file lists all individuals having contributed content to the repository.
-<<<<<<< HEAD
-Oliver Samuel oliversamuel146@gmail.com>
-Onifade Olanrewaju <aonifadeolanrewaju@gmail.com>
-=======
-Oliver Samuel oliversamuel146@gmail.com>
-Onifade Olanrewaju <aonifadeolanrewaju@gmail.com>
->>>>>>> db1ce3153e934ee9391bcdb561f9e9fa9afa0cd5
+Nyaaku OluwayemisI <nyaakuyemisi@gmail.com>
+Omokefe Emmanuel <Emmaonana18@gmail.com>
